--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ lxml = "^4"
 [tool.poetry.group.dev.dependencies]
 nose2 = "0.12.0"
 freezegun = "1.2.2"
+pre-commit = "2.17.0"
 
 [tool.black]
 line-length = 140
